--- a/PetShop/appsettings.json
+++ b/PetShop/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "ConnectionStrings": {
-    "PetCS": "server=DESKTOP-U45TBHP\\SQLEXPRESS; database=petstore; Integrated Security=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
+    "PetCS": "server=ACER; database=petshop; Integrated Security=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
